Commit 4 (post + delete) works + change profile (picture + text)
