# Backend/swagger.yaml
@@ -171,6 +171,45 @@ paths:
          description: Unauthorized
        '500':
          description: Unexpected Behaviour
+  /profile/picture:
+    post:
+      summary: Change the presentation picture
+      security:
+        - BearerAuth: []
+
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                image:
+                  type: string
+                  format: binary
+      responses:
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    format: int64
+                  imageUrl:
+                    type: string
+                  userId:
+                    type: integer
+                    format: int64
+        '500':
+          description: Unexpected Error
+        '401':
+          description: Unauthorized
+        '400':
+          description: Bad Request
+
 
 components:
   securitySchemes:
